--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -25,3 +25,10 @@ $main-color-dark-gray: rgb(58, 58, 58);
     margin-bottom: 0;
     color: $main-color-dark-gray;
 }
+
+.movie-default-img {
+    width:100%;
+    height: 200px;
+    background: rgb(151, 151, 151);
+    margin: 2%
+}
