add add new movie button

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -14,3 +14,10 @@
         </ng-container>
     </div>
 </div>
+
+<div style="position: absolute; top: 10px; right: 200px">
+    <button class="btn btn-light d-flex align-items-center">
+        <img class="mx-2" width="15px" src="../../assets/plus-solid.svg" alt=""> 
+       <span style="font-weight: 600">DODAJ NOWY</span> 
+    </button>
+</div>
